samples/_failures_safe/1761313928_e30b99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5804a613.c: In function ‘main’:
./samples/SAFE/__tmp_5804a613.c:158:5: error: expected expression at end of input
  158 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_5804a613.c:158:5: error: expected declaration or statement at end of input
